created dataframe with Power Supplier, kWh, and Avg Generation Cost

--- a/PELCO I/scrape_PELCO_I.ipynb
+++ b/PELCO I/scrape_PELCO_I.ipynb
@@ -272,16 +272,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = tabula.read_pdf(\"pdf downloads/gen_201801.pdf\", lattice=True, pages=1)[0]"
+    "df = tabula.read_pdf(\"pdf downloads/gen_202207.pdf\", lattice=True, pages=1)[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -306,12 +306,12 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Source</th>\n",
-       "      <th>% to Total\\rKwH\\rPurchased</th>\n",
-       "      <th>( A)\\rKwh\\rPurchased</th>\n",
+       "      <th>% to Total\\rkWH\\rPurchased</th>\n",
+       "      <th>( A)\\rkWh Purchased</th>\n",
        "      <th>(B)\\rBasic Generation\\rCost (Php)</th>\n",
-       "      <th>(   C   )\\rOther Cost\\rAdjustments</th>\n",
-       "      <th>(D= B + C)\\rT   o  t a   l  G  e   n  e  r  a  t i  o  n\\rCost for the month\\r(Php)</th>\n",
-       "      <th>( D/A)\\rAverage\\rGeneration Cost\\r(Php/Kwh)</th>\n",
+       "      <th>( C )\\r\\rOther Cost\\rAdjustments\\r(Php)</th>\n",
+       "      <th>(  D  =    B   +   C   )\\rTotal Generation\\rCost for the month\\r(Php)</th>\n",
+       "      <th>(D/A)\\rAverage\\rGeneration Cost\\r(Php/Kwh)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -327,47 +327,47 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>BILATERAL CONTRACTS\\rw/ IPPS\\r1.MPPCL</td>\n",
-       "      <td>100%</td>\n",
-       "      <td>21,038,021</td>\n",
-       "      <td>102,342,120.11</td>\n",
-       "      <td>100,982.50</td>\n",
-       "      <td>102,443,102.61</td>\n",
-       "      <td>4.8694</td>\n",
+       "      <td>BILATERAL CONTRACTS with IPPs</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>WESM</td>\n",
+       "      <td>1.Masinloc Power Partners Co. Ltd. (MPPCL)</td>\n",
+       "      <td>71%</td>\n",
+       "      <td>24,919,598</td>\n",
+       "      <td>193,323,615.52</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>193,323,615.52</td>\n",
+       "      <td>7.7579</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>SELF GENERATION</td>\n",
+       "      <td>2.Bac-Man Geothermal, Inc. (BGI)</td>\n",
+       "      <td>29%</td>\n",
+       "      <td>10,809,007</td>\n",
+       "      <td>56,183,055.27</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>56,183,055.27</td>\n",
+       "      <td>5.1978</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>SALE FOR RESALE</td>\n",
+       "      <td>Others  (PCR &amp; Other Adj.)</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0002</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>OTHERS</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -379,64 +379,64 @@
        "      <th>6</th>\n",
        "      <td>TOTAL</td>\n",
        "      <td>100%</td>\n",
-       "      <td>21,038,021</td>\n",
-       "      <td>102,342,120.11</td>\n",
-       "      <td>100,982.50</td>\n",
-       "      <td>102,443,102.61</td>\n",
-       "      <td>4.8694</td>\n",
+       "      <td>35,728,605</td>\n",
+       "      <td>249,506,670.79</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>249,506,670.79</td>\n",
+       "      <td>6.9836</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                  Source % to Total\\rKwH\\rPurchased  \\\n",
-       "0                                NPC-TSC                        NaN   \n",
-       "1  BILATERAL CONTRACTS\\rw/ IPPS\\r1.MPPCL                       100%   \n",
-       "2                                   WESM                        NaN   \n",
-       "3                        SELF GENERATION                        NaN   \n",
-       "4                        SALE FOR RESALE                        NaN   \n",
-       "5                                 OTHERS                        NaN   \n",
-       "6                                  TOTAL                       100%   \n",
+       "                                       Source % to Total\\rkWH\\rPurchased  \\\n",
+       "0                                     NPC-TSC                        NaN   \n",
+       "1               BILATERAL CONTRACTS with IPPs                        NaN   \n",
+       "2  1.Masinloc Power Partners Co. Ltd. (MPPCL)                        71%   \n",
+       "3            2.Bac-Man Geothermal, Inc. (BGI)                        29%   \n",
+       "4                  Others  (PCR & Other Adj.)                        NaN   \n",
+       "5                                         NaN                        NaN   \n",
+       "6                                       TOTAL                       100%   \n",
        "\n",
-       "  ( A)\\rKwh\\rPurchased (B)\\rBasic Generation\\rCost (Php)  \\\n",
-       "0                  NaN                               NaN   \n",
-       "1           21,038,021                    102,342,120.11   \n",
-       "2                  NaN                               NaN   \n",
-       "3                  NaN                               NaN   \n",
-       "4                  NaN                               NaN   \n",
-       "5                  NaN                               NaN   \n",
-       "6           21,038,021                    102,342,120.11   \n",
+       "  ( A)\\rkWh Purchased (B)\\rBasic Generation\\rCost (Php)  \\\n",
+       "0                 NaN                               NaN   \n",
+       "1                 NaN                               NaN   \n",
+       "2          24,919,598                    193,323,615.52   \n",
+       "3          10,809,007                     56,183,055.27   \n",
+       "4                 NaN                               NaN   \n",
+       "5                 NaN                               NaN   \n",
+       "6          35,728,605                    249,506,670.79   \n",
        "\n",
-       "  (   C   )\\rOther Cost\\rAdjustments  \\\n",
-       "0                                NaN   \n",
-       "1                         100,982.50   \n",
-       "2                                NaN   \n",
-       "3                                NaN   \n",
-       "4                                NaN   \n",
-       "5                                NaN   \n",
-       "6                         100,982.50   \n",
+       "   ( C )\\r\\rOther Cost\\rAdjustments\\r(Php)  \\\n",
+       "0                                      NaN   \n",
+       "1                                      NaN   \n",
+       "2                                      NaN   \n",
+       "3                                      NaN   \n",
+       "4                                      NaN   \n",
+       "5                                      NaN   \n",
+       "6                                      NaN   \n",
        "\n",
-       "  (D= B + C)\\rT   o  t a   l  G  e   n  e  r  a  t i  o  n\\rCost for the month\\r(Php)  \\\n",
-       "0                                                NaN                                    \n",
-       "1                                     102,443,102.61                                    \n",
-       "2                                                NaN                                    \n",
-       "3                                                NaN                                    \n",
-       "4                                                NaN                                    \n",
-       "5                                                NaN                                    \n",
-       "6                                     102,443,102.61                                    \n",
+       "  (  D  =    B   +   C   )\\rTotal Generation\\rCost for the month\\r(Php)  \\\n",
+       "0                                                NaN                      \n",
+       "1                                                NaN                      \n",
+       "2                                     193,323,615.52                      \n",
+       "3                                      56,183,055.27                      \n",
+       "4                                                NaN                      \n",
+       "5                                                NaN                      \n",
+       "6                                     249,506,670.79                      \n",
        "\n",
-       "   ( D/A)\\rAverage\\rGeneration Cost\\r(Php/Kwh)  \n",
-       "0                                          NaN  \n",
-       "1                                       4.8694  \n",
-       "2                                          NaN  \n",
-       "3                                          NaN  \n",
-       "4                                          NaN  \n",
-       "5                                          NaN  \n",
-       "6                                       4.8694  "
+       "   (D/A)\\rAverage\\rGeneration Cost\\r(Php/Kwh)  \n",
+       "0                                         NaN  \n",
+       "1                                         NaN  \n",
+       "2                                      7.7579  \n",
+       "3                                      5.1978  \n",
+       "4                                      0.0002  \n",
+       "5                                         NaN  \n",
+       "6                                      6.9836  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,15 +447,224 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Source</th>\n",
+       "      <th>( A)\\rkWh Purchased</th>\n",
+       "      <th>(D/A)\\rAverage\\rGeneration Cost\\r(Php/Kwh)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NPC-TSC</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>BILATERAL CONTRACTS with IPPs</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.Masinloc Power Partners Co. Ltd. (MPPCL)</td>\n",
+       "      <td>24,919,598</td>\n",
+       "      <td>7.7579</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2.Bac-Man Geothermal, Inc. (BGI)</td>\n",
+       "      <td>10,809,007</td>\n",
+       "      <td>5.1978</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Others  (PCR &amp; Other Adj.)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>TOTAL</td>\n",
+       "      <td>35,728,605</td>\n",
+       "      <td>6.9836</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                       Source ( A)\\rkWh Purchased  \\\n",
+       "0                                     NPC-TSC                 NaN   \n",
+       "1               BILATERAL CONTRACTS with IPPs                 NaN   \n",
+       "2  1.Masinloc Power Partners Co. Ltd. (MPPCL)          24,919,598   \n",
+       "3            2.Bac-Man Geothermal, Inc. (BGI)          10,809,007   \n",
+       "4                  Others  (PCR & Other Adj.)                 NaN   \n",
+       "5                                         NaN                 NaN   \n",
+       "6                                       TOTAL          35,728,605   \n",
+       "\n",
+       "   (D/A)\\rAverage\\rGeneration Cost\\r(Php/Kwh)  \n",
+       "0                                         NaN  \n",
+       "1                                         NaN  \n",
+       "2                                      7.7579  \n",
+       "3                                      5.1978  \n",
+       "4                                      0.0002  \n",
+       "5                                         NaN  \n",
+       "6                                      6.9836  "
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Identify the column with a row containing \"CONTRACTS\"\n",
+    "contract_column = df.columns[df.apply(lambda col: col.astype(str).str.contains('CONTRACTS')).any()].tolist()\n",
+    "\n",
+    "# Identify the column with \"(A)\" in the column header after replacing spaces\n",
+    "a_column = [col for col in df.columns if '(A)' in col.replace(' ', '')]\n",
+    "\n",
+    "# Identify the column with \"Average\" in the column header\n",
+    "average_column = [col for col in df.columns if 'Average' in col]\n",
+    "\n",
+    "columns_to_keep = contract_column + a_column + average_column\n",
+    "\n",
+    "df_sliced_columns = df[columns_to_keep]\n",
+    "\n",
+    "df_sliced_columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Power Supplier</th>\n",
+       "      <th>kWh</th>\n",
+       "      <th>Average Generation Cost</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.Masinloc Power Partners Co. Ltd. (MPPCL)</td>\n",
+       "      <td>24,919,598</td>\n",
+       "      <td>7.7579</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2.Bac-Man Geothermal, Inc. (BGI)</td>\n",
+       "      <td>10,809,007</td>\n",
+       "      <td>5.1978</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Others  (PCR &amp; Other Adj.)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>TOTAL</td>\n",
+       "      <td>35,728,605</td>\n",
+       "      <td>6.9836</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               Power Supplier         kWh  \\\n",
+       "2  1.Masinloc Power Partners Co. Ltd. (MPPCL)  24,919,598   \n",
+       "3            2.Bac-Man Geothermal, Inc. (BGI)  10,809,007   \n",
+       "4                  Others  (PCR & Other Adj.)         NaN   \n",
+       "6                                       TOTAL  35,728,605   \n",
+       "\n",
+       "   Average Generation Cost  \n",
+       "2                   7.7579  \n",
+       "3                   5.1978  \n",
+       "4                   0.0002  \n",
+       "6                   6.9836  "
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Function to check for leading number or presence of \"WESM\" or \"TOTAL\"\n",
+    "def row_filter(row):\n",
+    "    return any(row.astype(str).str.contains(r'^\\d+|WESM|TOTAL', regex=True))\n",
+    "\n",
+    "# Filter rows based on the condition\n",
+    "filtered_rows = df_sliced_columns.apply(row_filter, axis=1)\n",
+    "\n",
+    "# Slice the dataframe to keep only the filtered rows\n",
+    "df_sliced = df_sliced_columns[filtered_rows]\n",
+    "\n",
+    "df_sliced.columns = [\"Power Supplier\", \"kWh\",\"Average Generation Cost\"]\n",
+    "df_sliced"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# column with the word CONTRACTS is always the first column to keep\n",
-    "# take everything after CONTRACTS until WESM, take TOTAL\n",
-    "# second column to keep is column with Kwh in column title\n",
-    "# last column to keep is column with Average in column title"
-   ]
+   "source": []
   }
  ],
  "metadata": {
