--- a/PELCO I/scrape_PELCO_I.ipynb
+++ b/PELCO I/scrape_PELCO_I.ipynb
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
        "7                                     6 .0611  "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +566,7 @@
        "7                 6 .0611  "
       ]
      },
-     "execution_count": 80,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -629,24 +629,18 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>TOTAL</td>\n",
-       "      <td>46,212,677</td>\n",
-       "      <td>6 .0611</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
        "      <td>Bac-Man Geothermal, Inc. (BGI)</td>\n",
        "      <td>9,560,000</td>\n",
        "      <td>5 .5614</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>2</th>\n",
        "      <td>Power Sector Assets and Liabilities Management...</td>\n",
        "      <td>7,850,848</td>\n",
        "      <td>6 .0351</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>3</th>\n",
        "      <td>Net-Metering</td>\n",
        "      <td>218,989</td>\n",
        "      <td>4 .3457</td>\n",
@@ -658,33 +652,30 @@
       "text/plain": [
        "                                      Power Supplier         kWh  \\\n",
        "0           Wholesale Electricity Spot Market (WESM)  28,582,840   \n",
-       "1                                              TOTAL  46,212,677   \n",
-       "2                     Bac-Man Geothermal, Inc. (BGI)   9,560,000   \n",
-       "3  Power Sector Assets and Liabilities Management...   7,850,848   \n",
-       "4                                       Net-Metering     218,989   \n",
+       "1                     Bac-Man Geothermal, Inc. (BGI)   9,560,000   \n",
+       "2  Power Sector Assets and Liabilities Management...   7,850,848   \n",
+       "3                                       Net-Metering     218,989   \n",
        "\n",
        "  Average Generation Cost  \n",
        "0                 5 .8314  \n",
-       "1                 6 .0611  \n",
-       "2                 5 .5614  \n",
-       "3                 6 .0351  \n",
-       "4                 4 .3457  "
+       "1                 5 .5614  \n",
+       "2                 6 .0351  \n",
+       "3                 4 .3457  "
       ]
      },
-     "execution_count": 81,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Define the keywords for filtering\n",
-    "keywords = ['WESM', 'TOTAL']\n",
-    "\n",
     "# Check for leading numbers in the first column (assuming 'Power Supplier' is the first column here)\n",
     "df_filtered_leading_numbers = df_sliced_columns[df_sliced_columns['Power Supplier'].str.contains(r'^\\d+', na=False)]\n",
     "\n",
-    "# Filter rows based on keywords in any column\n",
-    "df_filtered_keywords = df_sliced_columns[df_sliced_columns.apply(lambda row: row.astype(str).str.contains('|'.join(keywords), case=False, na=False).any(), axis=1)]\n",
+    "# Filter rows based on whether any column contains 'WESM'\n",
+    "df_filtered_keywords = df_sliced_columns[df_sliced_columns.apply(\n",
+    "    lambda row: row.astype(str).str.contains('WESM', case=False, na=False).any(), axis=1\n",
+    ")]\n",
     "\n",
     "# Combine both filters\n",
     "df_new = pd.concat([df_filtered_keywords, df_filtered_leading_numbers]).drop_duplicates().copy()\n",
