added Generation Charge

--- a/PELCO I/scrape_PELCO_I.ipynb
+++ b/PELCO I/scrape_PELCO_I.ipynb
@@ -694,6 +694,104 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Power Supplier</th>\n",
+       "      <th>kWh</th>\n",
+       "      <th>Average Generation Cost</th>\n",
+       "      <th>Generation Charge</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Wholesale Electricity Spot Market (WESM)</td>\n",
+       "      <td>28,582,840</td>\n",
+       "      <td>5 .8314</td>\n",
+       "      <td>6 .0611</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bac-Man Geothermal, Inc. (BGI)</td>\n",
+       "      <td>9,560,000</td>\n",
+       "      <td>5 .5614</td>\n",
+       "      <td>6 .0611</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Power Sector Assets and Liabilities Management...</td>\n",
+       "      <td>7,850,848</td>\n",
+       "      <td>6 .0351</td>\n",
+       "      <td>6 .0611</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Net-Metering</td>\n",
+       "      <td>218,989</td>\n",
+       "      <td>4 .3457</td>\n",
+       "      <td>6 .0611</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                      Power Supplier         kWh  \\\n",
+       "0           Wholesale Electricity Spot Market (WESM)  28,582,840   \n",
+       "1                     Bac-Man Geothermal, Inc. (BGI)   9,560,000   \n",
+       "2  Power Sector Assets and Liabilities Management...   7,850,848   \n",
+       "3                                       Net-Metering     218,989   \n",
+       "\n",
+       "  Average Generation Cost Generation Charge  \n",
+       "0                 5 .8314           6 .0611  \n",
+       "1                 5 .5614           6 .0611  \n",
+       "2                 6 .0351           6 .0611  \n",
+       "3                 4 .3457           6 .0611  "
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find the row with 'TOTAL' and extract the value from 'Column Average'\n",
+    "total_row = df_sliced_columns[df_sliced_columns['Power Supplier'].str.contains('TOTAL', case=False, na=False)]\n",
+    "generation_charge = total_row['Average Generation Cost'].values[0] if not total_row.empty else None\n",
+    "\n",
+    "# Add the new column \"Generation Charge\" with the extracted value\n",
+    "df_new['Generation Charge'] = generation_charge\n",
+    "\n",
+    "# Reset the index of the final dataframe\n",
+    "df_new.reset_index(drop=True, inplace=True)\n",
+    "\n",
+    "df_new"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
