redownloaded output excel file

--- a/PELCO I/scrape_PELCO_I.ipynb
+++ b/PELCO I/scrape_PELCO_I.ipynb
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -3632,7 +3632,7 @@
        "188                  5.2939            5.2939  "
       ]
      },
-     "execution_count": 158,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3801,7 +3801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -3814,12 +3814,41 @@
        "       'Masinloc Power Partners Co. Ltd. (MPPCL)', ''], dtype=object)"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "big_df['Power Supplier'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['WESM', 'Masinloc Power Partners Co. Ltd. (MPPCL)',\n",
+       "       'Bac-Man Geothermal, Inc. (BGI)', 'Net-Metering', 'PSALM', ''],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "big_df['Power Supplier'] = big_df['Power Supplier'].replace({\n",
+    "    \"Wholesale Electricity Spot Market\": \"WESM\",\n",
+    "    \"Wholesale Electricity Spot Market (WESM)\": \"WESM\",\n",
+    "    \"Power Sector Assets and Liabilities\": \"PSALM\",\n",
+    "    \"MPPCL\": \"Masinloc Power Partners Co. Ltd. (MPPCL)\"\n",
+    "})\n",
+    "\n",
     "unique_suppliers = big_df['Power Supplier'].unique()\n",
     "\n",
     "unique_suppliers"
@@ -3827,11 +3856,218 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Power Supplier</th>\n",
+       "      <th>Power Supplier ID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>WESM</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Masinloc Power Partners Co. Ltd. (MPPCL)</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Bac-Man Geothermal, Inc. (BGI)</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Net-Metering</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>PSALM</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td></td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             Power Supplier  Power Supplier ID\n",
+       "0                                      WESM                  1\n",
+       "1  Masinloc Power Partners Co. Ltd. (MPPCL)                  2\n",
+       "2            Bac-Man Geothermal, Inc. (BGI)                  3\n",
+       "3                              Net-Metering                  4\n",
+       "4                                     PSALM                  5\n",
+       "5                                                            6"
+      ]
+     },
+     "execution_count": 176,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a mapping of power suppliers to unique IDs\n",
+    "supplier_id_map = {supplier: id+1 for id, supplier in enumerate(unique_suppliers)}\n",
+    "\n",
+    "# Create a new DataFrame from the mapping\n",
+    "supplier_df = pd.DataFrame(list(supplier_id_map.items()), columns=['Power Supplier', 'Power Supplier ID'])\n",
+    "\n",
+    "supplier_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>kWh</th>\n",
+       "      <th>Average Generation Cost</th>\n",
+       "      <th>Generation Charge</th>\n",
+       "      <th>Power Supplier ID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Jun-2018</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.3217</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Jun-2018</td>\n",
+       "      <td>27,792,443</td>\n",
+       "      <td>5.3217</td>\n",
+       "      <td>5.3217</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Dec-2018</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.6735</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Dec-2018</td>\n",
+       "      <td>24,507,511</td>\n",
+       "      <td>5.6735</td>\n",
+       "      <td>5.6735</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Feb-2021</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.2312</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Date         kWh Average Generation Cost Generation Charge  \\\n",
+       "0  Jun-2018         NaN                     NaN            5.3217   \n",
+       "1  Jun-2018  27,792,443                  5.3217            5.3217   \n",
+       "2  Dec-2018         NaN                     NaN            5.6735   \n",
+       "3  Dec-2018  24,507,511                  5.6735            5.6735   \n",
+       "4  Feb-2021         NaN                     NaN            4.2312   \n",
+       "\n",
+       "   Power Supplier ID  \n",
+       "0                  1  \n",
+       "1                  2  \n",
+       "2                  1  \n",
+       "3                  2  \n",
+       "4                  1  "
+      ]
+     },
+     "execution_count": 177,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a mapping from Power Suppliers to Supplier IDs\n",
+    "supplier_mapping = dict(zip(supplier_df['Power Supplier'], supplier_df['Power Supplier ID']))\n",
+    "\n",
+    "# Replace names with IDs in big_df\n",
+    "big_df['Power Supplier ID'] = big_df['Power Supplier'].map(supplier_mapping)\n",
+    "\n",
+    "# Ensure IDs are not converted to floats\n",
+    "#big_df['Power Supplier ID'] = big_df['Power Supplier ID'].astype(int)\n",
+    "\n",
+    "# Drop the old Power Suppliers column\n",
+    "big_df = big_df.drop(columns=['Power Supplier'])\n",
+    "\n",
+    "big_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#clean WESM"
+    "with pd.ExcelWriter(\"Historical_PELCO_I_GC_Breakdown.xlsx\", engine='openpyxl') as writer:\n",
+    "    big_df.to_excel(writer, sheet_name='Historical GC', index=False)\n",
+    "    supplier_df.to_excel(writer, sheet_name='Supplier IDs', index=False)"
    ]
   },
   {
