--- a/AKELCO/scrape_AKELCO.ipynb
+++ b/AKELCO/scrape_AKELCO.ipynb
@@ -156,7 +156,7 @@
     "    \n",
     "    print('PDFs have been downloaded successfully.')\n",
     "else:\n",
-    "    print(f\"Failed to retrieve the webpage. Status code: {response.status_code}\")\n"
+    "    print(f\"Failed to retrieve the webpage. Status code: {response.status_code}\")"
    ]
   },
   {
@@ -602,6 +602,20 @@
     "    big_df.to_excel(writer, sheet_name='Historical GC', index=False)\n",
     "    supplier_df.to_excel(writer, sheet_name='Supplier IDs', index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### for troubleshooting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
