--- a/DECORP/scrape_DECORP.ipynb
+++ b/DECORP/scrape_DECORP.ipynb
@@ -142,6 +142,91 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Processing**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "4\n",
+      "7\n",
+      "13\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list assignment index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[85], line 43\u001b[0m\n\u001b[1;32m     41\u001b[0m             \u001b[38;5;28;01mfor\u001b[39;00m j, texts \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(relevant_columns_texts): \u001b[38;5;66;03m#for each column\u001b[39;00m\n\u001b[1;32m     42\u001b[0m                 \u001b[38;5;28;01mif\u001b[39;00m i \u001b[38;5;241m<\u001b[39m \u001b[38;5;28mlen\u001b[39m(texts):\n\u001b[0;32m---> 43\u001b[0m                     table_data[i][j \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m=\u001b[39m texts[i]\n\u001b[1;32m     45\u001b[0m \u001b[38;5;66;03m# Convert the table data to a DataFrame\u001b[39;00m\n\u001b[1;32m     46\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(table_data)\n",
+      "\u001b[0;31mIndexError\u001b[0m: list assignment index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "# Read the HTML file\n",
+    "with open('decorp_rates.html', 'r', encoding='utf-8') as file:\n",
+    "    html_content = file.read()\n",
+    "\n",
+    "# Parse the HTML content using BeautifulSoup\n",
+    "soup = BeautifulSoup(html_content, 'lxml')\n",
+    "\n",
+    "# Find the table in the HTML (assuming there's only one table)\n",
+    "table = soup.find('table')\n",
+    "\n",
+    "# Initialize a list to store the table data\n",
+    "table_data = []\n",
+    "\n",
+    "# Process each row in the table\n",
+    "for row in table.find_all('tr'):\n",
+    "    cells = row.find_all('td')\n",
+    "\n",
+    "    # Extract text from cells, split by <br>, and trim whitespace\n",
+    "    cell_texts = [cell.get_text(separator='\\n').split('\\n') for cell in cells]\n",
+    "\n",
+    "    # Extract relevant columns (first column + columns from the fourth onwards)\n",
+    "    if len(cells) >= 4:\n",
+    "        first_column_value = cell_texts[0][0] if cell_texts[0] else None\n",
+    "        relevant_columns_texts = cell_texts[3:]  # Columns from the 4th onward\n",
+    "\n",
+    "        # Determine the maximum number of rows needed for this table\n",
+    "        max_rows = max(len(texts) for texts in relevant_columns_texts)\n",
+    "        print(max_rows)\n",
+    "        \n",
+    "        # Create rows and populate with None initially\n",
+    "        for i in range(max_rows):\n",
+    "            if len(table_data) <= i:\n",
+    "                # Initialize the row with None values, plus one for the first column\n",
+    "                table_data.append([None] * (len(relevant_columns_texts) + 1))\n",
+    "            \n",
+    "            table_data[i][0] = first_column_value  # Repeat the first column value\n",
+    "            \n",
+    "            # Populate the relevant columns\n",
+    "            for j, texts in enumerate(relevant_columns_texts): #for each column\n",
+    "                if i < len(texts):\n",
+    "                    table_data[i][j + 1] = texts[i]\n",
+    "\n",
+    "# Convert the table data to a DataFrame\n",
+    "df = pd.DataFrame(table_data)\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
